@@ -17,9 +17,9 @@ public class DebtsWithNoPaymentCodeReferencesRestriction extends DebtsWithNoPaym
         super();
     }
     
-    protected DebtsWithNoPaymentCodeReferencesRestriction(AcademicDebtGenerationRule rule, boolean excludeIfMatches) {
+    protected DebtsWithNoPaymentCodeReferencesRestriction(AcademicDebtGenerationRule rule) {
         this();
-        super.init(rule, excludeIfMatches);
+        super.init(rule);
     }
 
     @Override
@@ -44,14 +44,12 @@ public class DebtsWithNoPaymentCodeReferencesRestriction extends DebtsWithNoPaym
 
     @Override
     public boolean test(Registration registration) {
-        // TODO: Evaluate if excludeifMatches make sense
-//        return isToInclude() ? evaluateResult(registration) : !evaluateResult(registration);
         return evaluateResult(registration);
     }
 
     @Override
     public DebtsWithNoPaymentCodeReferencesRestriction makeCopy(AcademicDebtGenerationRule ruleToCreate) {
-        return create(ruleToCreate, getExcludeIfMatches());
+        return create(ruleToCreate);
     }
     
     /*
@@ -60,8 +58,8 @@ public class DebtsWithNoPaymentCodeReferencesRestriction extends DebtsWithNoPaym
      * ********
      */
     
-    public static DebtsWithNoPaymentCodeReferencesRestriction create(AcademicDebtGenerationRule rule, boolean excludeIfMatches) {
-        return new DebtsWithNoPaymentCodeReferencesRestriction(rule, excludeIfMatches);
+    public static DebtsWithNoPaymentCodeReferencesRestriction create(AcademicDebtGenerationRule rule) {
+        return new DebtsWithNoPaymentCodeReferencesRestriction(rule);
     }
 
     public static LocalizedString RESTRICTION_NAME() {
