@@ -1,3 +1,6 @@
+- Refactor: Remove excludesIfMatches property, which is not used
+- Refactor: Use academic treasury dependent platform services to translate statute type description
+
 7.2.1 (18-06-2021)
 - Bug Fix: Remove and replace condition tuition rule beans
 
